--- a/src/main/resources/static/booking.html
+++ b/src/main/resources/static/booking.html
@@ -233,7 +233,7 @@
   //获取用户信息并展示
   $.ajax({
     type: "POST",
-    url: "http://39.106.15.220:8080/user/info",
+    url: "http://localhost:8080/user/info",
     headers: {
       token: localStorage.token,
       "Content-Type": "application/x-www-form-urlencoded" //设置请求头请求格式为JSON
@@ -248,7 +248,7 @@
   //获取room信息并转换格式
   $.ajax({
     type: "GET",
-    url: "http://39.106.15.220:8080/manager/listMeetingRoom",
+    url: "http://localhost:8080/manager/listMeetingRoom",
     headers: {
       token: localStorage.token,
       "Content-Type": "application/x-www-form-urlencoded" //设置请求头请求格式为JSON
@@ -266,7 +266,7 @@
   //获取部门信息
   $.ajax({
     type: "GET",
-    url: "http://39.106.15.220:8080/manager/listDepartment",
+    url: "http://localhost:8080/manager/listDepartment",
     headers: {
       token: localStorage.token,
       "Content-Type": "application/x-www-form-urlencoded" //设置请求头请求格式为JSON
@@ -284,7 +284,7 @@
   //获取device_id_list信息
   $.ajax({
     type: "GET",
-    url: "http://39.106.15.220:8080/manager/listDevice",
+    url: "http://localhost:8080/manager/listDevice",
     headers: {
       token: localStorage.token,
       "Content-Type": "application/x-www-form-urlencoded" //设置请求头请求格式为JSON
@@ -366,7 +366,7 @@
     }
     $.ajax({
       type: "POST",
-      url: "http://39.106.15.220:8080/meeting/select",
+      url: "http://localhost:8080/meeting/select",
       headers: {
         token: localStorage.token,
         "Content-Type": "application/x-www-form-urlencoded" //设置请求头请求格式为JSON
@@ -422,7 +422,7 @@
     window.nowRoomId = id;
     $.ajax({
       type: "POST",
-      url: "http://39.106.15.220:8080/meeting/list",
+      url: "http://localhost:8080/meeting/list",
       headers: {
         token: localStorage.token,
         "Content-Type": "application/x-www-form-urlencoded" //设置请求头请求格式为JSON
@@ -600,7 +600,7 @@
         console.log(data);
         $.ajax({
           type: "POST",
-          url: "http://39.106.15.220:8080/meeting/booking",
+          url: "http://localhost:8080/meeting/booking",
           headers: {
             token: localStorage.token,
             "Content-Type": "application/x-www-form-urlencoded" //设置请求头请求格式为JSON
